examples/test/testpolicy11961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11961
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key40: value15
      key10: value49
      key32: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value27
          key24: value31
          key34: value38
      podSelector:
        matchLabels:
          key48: value14
          key29: value38
          key33: value43
